// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alpha renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-alpha alpha-picker"
    style="position: relative; width: 316px; height: 16px;"
  >
    <div
      class="rc-alpha-control"
      style="border-radius: 2px;"
    >
      <div
        class="rc-alpha-control__checkboard"
        style="border-radius: 2px;"
      >
        <div
          class="rc-checkboard"
          style="background: url("null");"
        />
      </div>
      <div
        class="rc-alpha-control__gradient"
        style="background: linear-gradient(to right, rgba(34, 25, 77, 0) 0%, rgb(34, 25, 77) 100%); border-radius: 2px;"
      />
      <div
        class="rc-alpha-control__container"
      >
        <div
          class="rc-alpha-control__pointer"
          style="left: 100%;"
        >
          <div
            style="width: 18px; height: 18px; -webkit-border-radius: 50%; border-radius: 50%; -webkit-transform: translate(-9px, -1px); transform: translate(-9px, -1px); background-color: rgb(248, 248, 248); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alpha renders vertically 1`] = `
<DocumentFragment>
  <div
    class="rc-alpha alpha-picker"
    style="position: relative; width: 20px; height: 200px;"
  >
    <div
      class="rc-alpha-control rc-alpha-control--vertical"
      style="border-radius: 2px;"
    >
      <div
        class="rc-alpha-control__checkboard"
        style="border-radius: 2px;"
      >
        <div
          class="rc-checkboard"
          style="background: url("null");"
        />
      </div>
      <div
        class="rc-alpha-control__gradient"
        style="background: linear-gradient(rgba(34, 25, 77, 0) 0%, rgb(34, 25, 77) 100%); border-radius: 2px;"
      />
      <div
        class="rc-alpha-control__container"
      >
        <div
          class="rc-alpha-control__pointer"
          style="left: 0px; top: 100%;"
        >
          <div
            style="width: 18px; height: 18px; -webkit-border-radius: 50%; border-radius: 50%; -webkit-transform: translate(-3px, -9px); transform: translate(-3px, -9px); background-color: rgb(248, 248, 248); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AlphaPointer renders correctly 1`] = `
<DocumentFragment>
  <div
    style="width: 18px; height: 18px; -webkit-border-radius: 50%; border-radius: 50%; -webkit-transform: translate(-9px, -1px); transform: translate(-9px, -1px); background-color: rgb(248, 248, 248); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
  />
</DocumentFragment>
`;
